# plone-zyklopenkekse

./: .dockerignore  .gitignore  Dockerfile  README.md  ROADMAP.md  cookiecutter.json  pyproject.toml
.github/workflows/: test.yml
deployment/: entrypoint.sh
helpers/: create.py  generate.py  versions.py
hooks/: post_gen_project.py
tests/: conftest.py  test_backend.py  test_ci.py  test_create.py  test_deployment.py  test_docker.py  test_frontend.py  test_generate.py  test_generation.py  test_makefile.py  test_no_frontend.py  test_storage.py  test_versions.py
{{ cookiecutter.organization }}-{{ cookiecutter.project_name }}/: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md
{{ cookiecutter.organization }}-{{ cookiecutter.project_name }}/.github/workflows/: ci.yml
{{ cookiecutter.organization }}-{{ cookiecutter.project_name }}/backend/: .gitignore  README.md  constraints.txt  include.mk  instance.yaml  mx.ini  mxmake-preseed.yaml  pyproject.toml
{{ cookiecutter.organization }}-{{ cookiecutter.project_name }}/backend/src/{{ cookiecutter.organization }}/{{ cookiecutter.project_name }}/: configure.zcml  testing.py
{{ cookiecutter.organization }}-{{ cookiecutter.project_name }}/backend/src/{{ cookiecutter.organization }}/{{ cookiecutter.project_name }}/profiles/default/: browserlayer.xml  metadata.xml
{{ cookiecutter.organization }}-{{ cookiecutter.project_name }}/backend/src/{{ cookiecutter.organization }}/{{ cookiecutter.project_name }}/profiles/uninstall/: browserlayer.xml
{{ cookiecutter.organization }}-{{ cookiecutter.project_name }}/backend/src/{{ cookiecutter.organization }}/{{ cookiecutter.project_name }}/setuphandlers/: __init__.py
{{ cookiecutter.organization }}-{{ cookiecutter.project_name }}/backend/tests/: conftest.py
{{ cookiecutter.organization }}-{{ cookiecutter.project_name }}/deployment/: README.md  entrypoint.sh
{{ cookiecutter.organization }}-{{ cookiecutter.project_name }}/deployment/cdk8s/: .env.example  .gitignore  cdk8s.yaml  ingress.ts  main.ts  package.json  postgres.ts  tsconfig.json
{{ cookiecutter.organization }}-{{ cookiecutter.project_name }}/frontend/: .gitignore  README.md  cypress.config.js  jest-addon.config.js  mrs.developer.json  mxmake-preseed.yaml  package.json  pnpm-workspace.yaml  volto.config.js
