[project]
name = "plone-zyklopenkekse"
version = "0.1.0"
description = "Plone/Volto monorepo-all-in-one-OCI-image project generator"
requires-python = ">=3.12"
dependencies = [
    "cookiecutter>=2.6",
    "mxmake",
    "textual>=1.0",
    "httpx",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cookies",
    "pytest-asyncio",
]
docs = [
    "sphinx",
    "sphinx-autobuild",
    "myst_parser",
    "sphinxcontrib.mermaid",
    "shibuya",
    "sphinx-design",
    "sphinx-copybutton",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["helpers*"]

[project.scripts]
zyklopenkekse = "helpers.create:main"
